import mongoose from 'mongoose';

const songSchema = new mongoose.Schema(
  {
    // Spotify fields - sparse unique index allows multiple null values
    spotify_id: { type: String, unique: true, sparse: true, index: true },
    name: { type: String, required: true, index: true },
    
    // Legacy field for backward compatibility
    title: { type: String, index: true },
    
    // Relationships
    artists: [{ type: mongoose.Schema.Types.ObjectId, ref: 'Artist' }],
    album: { type: mongoose.Schema.Types.ObjectId, ref: 'Album' },
    genre: { type: String, index: true },
    genres: [{ type: String, index: true }],
    
    // Track details
    duration_ms: { type: Number, default: 0 },
    track_number: { type: Number },
    disc_number: { type: Number, default: 1 },
    explicit: { type: Boolean, default: false },
    file_path: { type: String }, // Made optional to avoid validation errors with existing data
    
    // Audio features (can be populated from Spotify Audio Features API)
    audio_features: {
      danceability: { type: Number, min: 0, max: 1 },
      energy: { type: Number, min: 0, max: 1 },
      key: { type: Number, min: 0, max: 11 },
      loudness: { type: Number },
      mode: { type: Number, enum: [0, 1] },
      speechiness: { type: Number, min: 0, max: 1 },
      acousticness: { type: Number, min: 0, max: 1 },
      instrumentalness: { type: Number, min: 0, max: 1 },
      liveness: { type: Number, min: 0, max: 1 },
      valence: { type: Number, min: 0, max: 1 },
      tempo: { type: Number },
      time_signature: { type: Number }
    },
    
    // External URLs
    external_urls: {
      spotify: String
    },
    
    // Preview
    preview_url: String,
    
    // Popularity
    popularity: { type: Number, min: 0, max: 100 },
    is_visible: { type: Boolean, default: true, index: true },
    publish_status: { type: String, enum: ['published', 'draft', 'hidden'], default: 'published', index: true },
    hidden_reason: { type: String, default: '' },
    
    // Song taxonomy fields used by admin and discovery views
    category: { type: String, index: true },
    mood: { type: String, index: true },
    language: { type: String, index: true },

    // Legacy fields (for backward compatibility)
    artist: { type: mongoose.Schema.Types.ObjectId, ref: 'Artist' },
    duration: { type: Number },
    cover_art_url: { type: String },
    audio_url: { type: String },
    lyrics: { type: String },
    play_count: { type: Number, default: 0 },
    last_played_at: { type: Date }, // Added to track playback activity in Compass
    // Categorization
    tags: [{ type: String, index: true }],
    
    // Sync metadata
    last_synced: { type: Date, default: Date.now },
    sync_source: { type: String, default: 'spotify' }
  },
  { timestamps: true }
);

// Index for better search performance, including lyric text search
songSchema.index(
  { name: 'text', title: 'text', lyrics: 'text' },
  {
    default_language: 'none',
    language_override: 'search_language',
    weights: {
      name: 10,
      title: 8,
      lyrics: 3
    }
  }
);
songSchema.index({ popularity: -1 });
songSchema.index({ 'audio_features.tempo': 1 });
songSchema.index({ 'audio_features.energy': 1 });
songSchema.index({ 'audio_features.valence': 1 });

// Virtual for duration in seconds
songSchema.virtual('duration_seconds').get(function() {
  return Math.floor(this.duration_ms / 1000);
});

// Ensure virtual fields are serialized
songSchema.set('toJSON', { virtuals: true });

// Force re-registration of the model to apply schema changes
if (mongoose.models && mongoose.models.Song) {
  delete mongoose.models.Song;
}

const Song = mongoose.model('Song', songSchema);
export default Song;
