erDiagram
  USER ||--o{ PLAYLIST : creates
  USER ||--o{ LISTENINGHISTORY : generates
  USER ||--o{ PAYMENTTRANSACTION : makes
  USER }o--o{ SONG : likes
  USER }o--o{ ARTIST : follows
  USER }o--o{ VINYL : purchases
  ARTIST ||--o{ ALBUM : releases
  ALBUM ||--o{ SONG : contains
  ARTIST }o--o{ SONG : performs
  SONG ||--o| LYRIC : has
  PLAYLIST }o--o{ SONG : includes
  VINYL }o--o| ALBUM : "pressed from"
  VINYL }o--o| SONG : "single of"
  LISTENINGHISTORY }o--|| SONG : references
  PAYMENTTRANSACTION }o--|| VINYL : "pays for"

  USER {
    ObjectId _id PK
    string name
    string email UK
    string password "hashed"
    boolean emailVerified
    boolean onboarded
    array preferred_genres
    array preferred_moods
    array preferred_languages
    array preferred_tags
  }
  ARTIST {
    ObjectId _id PK
    string name
    array genres
    boolean is_visible
    string publish_status
  }
  ALBUM {
    ObjectId _id PK
    string name
    array artists FK
    string release_date
    boolean is_visible
  }
  SONG {
    ObjectId _id PK
    string name
    array artists FK
    ObjectId album FK
    string genre
    string mood
    string category
    string language
    string audio_url
  }
  PLAYLIST {
    ObjectId _id PK
    string name
    ObjectId user FK
    array songs FK
    boolean is_public
  }
  VINYL {
    ObjectId _id PK
    string name
    number price
    ObjectId albumId FK
    ObjectId songId FK
    boolean display_in_store
  }
  LISTENINGHISTORY {
    ObjectId _id PK
    ObjectId user FK
    ObjectId song FK
    string genre
    date played_at
  }
  PAYMENTTRANSACTION {
    ObjectId _id PK
    ObjectId user FK
    ObjectId vinyl FK
    number amount
    string status
  }
  LYRIC {
    ObjectId _id PK
    ObjectId song FK
    array lines
    boolean synced
  }
